@@ -2,18 +2,28 @@ package it.gov.pagopa.rtd.ms.rtdmsfilereporter.service;
 
 import static it.gov.pagopa.rtd.ms.rtdmsfilereporter.TestUtils.createFileReport;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 
+import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.exception.FileMetadataNotFoundException;
+import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.model.FileMetadata;
 import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.model.FileReport;
+import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.model.AggregatesDataSummary;
+
 import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.repository.FileReportRepository;
 import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.service.FileReportService;
 import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.service.FileReportServiceImpl;
+import it.gov.pagopa.rtd.ms.rtdmsfilereporter.domain.service.StorageAccountService;
+
 import java.util.Collection;
 import java.util.Collections;
+import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import it.gov.pagopa.rtd.ms.rtdmsfilereporter.feign.config.ReportConfiguration;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -24,8 +34,12 @@ import org.mockito.MockitoAnnotations;
 
 class FileReportServiceImplTest {
 
-  @Mock
-  FileReportRepository fileReportRepository;
+  @Mock FileReportRepository fileReportRepository;
+
+  @Mock StorageAccountService storageAccountService;
+
+  private final ReportConfiguration reportConfiguration = new ReportConfiguration(15);
+
   FileReportService fileReportService;
   AutoCloseable autoCloseable;
 
@@ -33,7 +47,8 @@ class FileReportServiceImplTest {
   void setUp() {
     autoCloseable = MockitoAnnotations.openMocks(this);
 
-    fileReportService = new FileReportServiceImpl(fileReportRepository);
+    fileReportService =
+        new FileReportServiceImpl(fileReportRepository, storageAccountService, reportConfiguration);
   }
 
   @SneakyThrows
@@ -46,8 +61,8 @@ class FileReportServiceImplTest {
   void whenGetFileReportForManySenderCodesThenMergeTheReportsCorrectly() {
     Mockito.when(fileReportRepository.getReportsBySenderCodes(any())).thenReturn(getReportList());
 
-    FileReport filereport = fileReportService.getAggregateFileReport(
-        Collections.singleton("12345"));
+    FileReport filereport =
+        fileReportService.getAggregateFileReport(Collections.singleton("12345"));
 
     assertThat(filereport).isNotNull();
     assertThat(filereport.getFilesUploaded()).isNotNull().hasSize(4);
@@ -59,8 +74,8 @@ class FileReportServiceImplTest {
     Mockito.when(fileReportRepository.getReportsBySenderCodes(any()))
         .thenReturn(Collections.emptyList());
 
-    FileReport filereport = fileReportService.getAggregateFileReport(
-        Collections.singleton("12345"));
+    FileReport filereport =
+        fileReportService.getAggregateFileReport(Collections.singleton("12345"));
 
     assertThat(filereport).isNotNull();
     assertThat(filereport.getFilesUploaded()).isNotNull().isEmpty();
@@ -69,12 +84,11 @@ class FileReportServiceImplTest {
 
   @Test
   void whenGetFileReportThenReturnsAReport() {
-    Mockito.when(fileReportRepository.getReportBySenderCode(any()))
-        .thenReturn(Optional.empty());
+    Mockito.when(fileReportRepository.getReportBySenderCode(any())).thenReturn(Optional.empty());
 
-    var filereport = fileReportService.getFileReport("12345");
+    var fileReport = fileReportService.getFileReport("12345");
 
-    assertThat(filereport).isEmpty();
+    assertThat(fileReport).isEmpty();
   }
 
   @Test
@@ -91,10 +105,11 @@ class FileReportServiceImplTest {
 
     var ackToDownloadList = fileReportService.getAckToDownloadList(Collections.singleton("12345"));
 
-    var expectedList = reportMock.stream()
-        .map(FileReport::getAckToDownload)
-        .flatMap(Collection::stream)
-        .collect(Collectors.toSet());
+    var expectedList =
+        reportMock.stream()
+            .map(FileReport::getAckToDownload)
+            .flatMap(Collection::stream)
+            .collect(Collectors.toSet());
     assertThat(ackToDownloadList)
         .hasSize(expectedList.size())
         .containsExactlyInAnyOrderElementsOf(expectedList);
@@ -102,7 +117,71 @@ class FileReportServiceImplTest {
 
   Collection<FileReport> getReportList() {
     return Stream.of(createFileReport(3, 1), createFileReport(1, 2), createFileReport(2, 1))
-        .collect(Collectors.toList());
+        .toList();
   }
 
+  @Test
+  void whenSaveMetadataGivenWellFormedFilenameThenExtractSenderCodeAndSave() {
+    String basePath = "basePath";
+    String fileName = "ADE.12345.TRNLOG.20230101.130000.001.01.csv";
+    String senderCode = "12345";
+
+    FileReport fileReport = FileReport.createFileReportWithSenderCode(senderCode);
+
+    var fileMetadata = FileMetadata.createNewFileMetadata(fileName);
+    fileReport.addFileOrUpdateStatusIfPresent(fileMetadata);
+
+    Mockito.when(fileReportService.getFileReport(senderCode)).thenReturn(Optional.of(fileReport));
+
+    AggregatesDataSummary dataSummaryMock =
+        AggregatesDataSummary.builder()
+            .countPositiveTransactions(100)
+            .sumAmountPositiveTransactions(1000)
+            .build();
+    Mockito.when(storageAccountService.getMetadata("/" + basePath + "/", fileName))
+        .thenReturn(dataSummaryMock);
+
+    fileReportService.saveMetadata(basePath, fileName);
+
+    Mockito.verify(fileReportRepository).save(fileReport);
+    assertThat(fileMetadata.getPath()).isEqualTo("/" + basePath + "/");
+  }
+
+  @Test
+  void whenSaveMetadataGivenNoMatchingFileMetadataThenThrowNotFound() {
+
+    String basePath = "basePath";
+    String fileName = "ADE.12345.TRNLOG.20230101.130000.001.01.csv";
+    String senderCode = "12345";
+
+    FileReport fileReport = FileReport.createFileReportWithSenderCode(senderCode);
+
+    Mockito.when(fileReportService.getFileReport(senderCode)).thenReturn(Optional.of(fileReport));
+
+    assertThatThrownBy(() -> fileReportService.saveMetadata(basePath, fileName))
+        .isInstanceOf(FileMetadataNotFoundException.class)
+        .hasMessageContaining("not found in latest")
+        .hasMessageContaining(fileName)
+        .hasMessageContaining(senderCode);
+
+    Mockito.verify(fileReportRepository, Mockito.never()).save(any());
+  }
+
+  @Test
+  void whenSaveMetadataGivenNotWellFormedFilenameThenThrowException() {
+    String basePath = "basePath";
+    String fileName = "ADE.12345.TRNLOG.20230101.130000.001.01.csv";
+    String senderCode = "09876";
+
+    FileReport fileReport = FileReport.createFileReportWithSenderCode(senderCode);
+
+    String senderCodeFromFile = fileName.split("\\.")[1];
+    Mockito.when(fileReportService.getFileReport(senderCode)).thenReturn(Optional.of(fileReport));
+    assertThatThrownBy(() -> fileReportService.saveMetadata(basePath, fileName))
+        .isInstanceOf(NoSuchElementException.class)
+        .hasMessageContaining("FileReport not found for sender")
+        .hasMessageContaining(senderCodeFromFile);
+
+    Mockito.verify(fileReportRepository, Mockito.never()).save(any());
+  }
 }
